--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify-icon/react": "^1.0.8",
+    "@iconify/react": "^4.1.1"
   }
 }
